# VioNature

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  GAMEPLAY_GUIDE.md  README.md
assets/models/weapons/: gravity_nailer.mtl  infinity_gauntlet.mtl  rift_cutter.mtl  rocket_launcher.mtl
build-local/: CMakeCache.txt
build-sandbox/: CPackConfig.cmake  CPackSourceConfig.cmake  ModelViewer
build-sandbox/assets/models/weapons/: flamethrower.mtl
build-sandbox/config/: gameplay.cfg
build-windows/: CPackConfig.cmake  CPackSourceConfig.cmake
build-windows/VioNature_Release/: GAMEPLAY_GUIDE.md
build-windows/VioNature_Release/assets/models/weapons/: laser_rifle.mtl  shotgun.mtl
build-windows/VioNature_Release/config/: gameplay.cfg
build-windows/release/assets/models/bosses/: star_of_bethlehem.mtl
build-windows/release/assets/models/weapons/: recoil_lance.mtl
build-windows/release/config/: gameplay.cfg
cmake/: toolchain-mingw64.cmake
config/: gameplay.cfg  gameplay_annotated.cfg
scripts/: generate_star.py  package-release.sh
src/: Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  PhysicsWorld.cpp  PhysicsWorld.h  WeaponViewModel.cpp  WeaponViewModel.h  main.cpp
tools/: ModelViewer.cpp
